2010-03-28 Borut Razem <borut.razem AT siol.net>

	* device/include/ds400/ds400rom.h, device/include/asm/gbz80/features.h,
	  device/lib/z80/crt0.s, device/lib/gbz80/stubs.s,
	  device/lib/gbz80/div.s, device/lib/gbz80/fstubs.s,
	  device/lib/gbz80/putchar.s, device/lib/gbz80/crt0.s,
	  device/lib/gbz80/crt0_rle.s, device/lib/gbz80/heap.s,
	  device/lib/gbz80/mul.s, device/lib/gbz80/shift.s,
	  device/lib/ds400/memcpyx.c, device/lib/hc08/_mulint.c,
	  device/lib/hc08/_ret.c, device/lib/hc08/_mullong.c,
	  device/lib/mcs51/crtpagesfr.asm, device/lib/mcs51/crtxpush.asm,
	  device/lib/mcs51/crtxpopbits.asm, device/lib/mcs51/crtxpushr0.asm,
	  device/lib/mcs51/crtbank.asm, device/lib/mcs51/crtcall.asm,
	  device/lib/mcs51/crtxinit.asm, device/lib/mcs51/crtstart.asm,
	  device/lib/mcs51/crtxstack.asm, device/lib/mcs51/crtxclear.asm,
	  device/lib/mcs51/crtclear.asm, device/lib/mcs51/crtxpop.asm,
	* device/include/asm/mcs51/features.h, device/include/mcs51/*.h:
	  sdcc library license changed to GPL+LE

2010-03-25 Borut Razem <borut.razem AT siol.net>

	* sdcc/configure, sdcc/configure.in, sdcc/sdccconf_in.h,
	  sdcc/sim/ucsim/configure, sdcc/sim/ucsim/configure.in,
	  sdcc/sim/ucsim/ddconfig_in.h:
	  fixed endianness detection, enabled NetBSD build
	* sim/ucsim/cmd.src/cmdpars.cc:
	  fixed alloca detection on Solaris x86. This is actually bison++ bug.
	* support/regression/tests/bitfields.c,
	  support/regression/tests/literalop.c,
	  support/regression/tests/bitwise.c,
	  support/regression/tests/swap.c:
	  fixed host regression tests on NetBSD sparc64

2010-03-23 Borut Razem <borut.razem AT siol.net>

	* device/include/*.h, device/include/asm/z80/features.h,
	  device/include/asm/default/features.h, device/include/z80/*.h,
	  device/lib/z80/*.s, device/include/asm/ds390/features.h,
	  device/lib/ds390/memcpyx.c, device/lib/ds390/putchar.c:
	  sdcc library license changed to GPL+LE

2010-03-20 Borut Razem <borut.razem AT siol.net>
